--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,7 +1,20 @@
-@import url("http://fonts.cdnfonts.com/css/helvetica-neue-9");
 body {
   background: whitesmoke !important;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "SF Pro Text", "Myriad Set Pro", "SF Pro Icons", "Helvetica Neue",
+    "Helvetica", "Arial", sans-serif;
+}
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: white;
 }
 
 [data-target="#mainMenu"] {
