--- a/assets/css/product -1 .css
+++ b/assets/css/product -1 .css
@@ -11982,7 +11982,7 @@ fieldset:disabled .btn {
 }
 
 .shopping-cart .summary {
-  border-top: 2px solid #5ea4f3;
+  border-top: 2px solid #000;
   background-color: #f7fbff;
   height: 100%;
   padding: 30px;
