--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -105,3 +105,65 @@ a:focus {
   color: #b7b7b7;
   margin-bottom: 0;
 }
+
+.button {
+  display: flex;
+}
+
+.box {
+  width: 35px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 700;
+  color: black;
+  transition: all 0.8s;
+  cursor: pointer;
+  position: relative;
+  background: pink;
+  overflow: hidden;
+}
+
+.box:before {
+  content: "P";
+  position: absolute;
+  top: 0;
+  background: #0f0f0f;
+  color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(100%);
+  transition: transform 0.4s;
+}
+
+.box:nth-child(2)::before {
+  transform: translateY(-100%);
+  content: "H";
+  color: white;
+}
+
+.box:nth-child(3)::before {
+  content: "O";
+}
+
+.box:nth-child(4)::before {
+  transform: translateY(-100%);
+  content: "N";
+}
+
+.box:nth-child(5)::before {
+  content: "E";
+}
+
+.box:nth-child(6)::before {
+  content: "S";
+}
+
+.button:hover .box:before {
+  transform: translateY(0);
+}
